--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,9 @@
+
+/*   #A683E3      E4E9FD */  
+
 html {
-    background-color: #E4E9FD;
-    background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
+    background-color: #57FEFF;
+    background-image: -webkit-linear-gradient(90deg, #1589FF	  50%, #CCFFFF 50%);
     min-height: 1000px;
     font-family: 'helvetica neue';
   }
@@ -19,7 +22,7 @@ html {
   }
   
   #heading {
-    background-color: #A683E3;
+    background-color: #1589FF;
     text-align: center;
   }
   
@@ -36,7 +39,7 @@ html {
   
   input:checked+p {
     text-decoration: line-through;
-    text-decoration-color: #A683E3;
+    text-decoration-color: #1589FF;
   }
   
   input[type="checkbox"] {
@@ -61,7 +64,7 @@ html {
     width: 50px;
     border-radius: 50%;
     border-color: transparent;
-    background-color: #A683E3;
+    background-color: #1589FF;
     color: #fff;
     font-size: 30px;
     padding-bottom: 6px;
@@ -81,7 +84,7 @@ html {
   
   input[type="text"]:focus {
     outline: none;
-    box-shadow: inset 0 -3px 0 0 #A683E3;
+    box-shadow: inset 0 -3px 0 0 #1589FF;
   }
   
   ::placeholder {
